--- a/css/style.css
+++ b/css/style.css
@@ -1,148 +1,156 @@
+:root{
+    --primary-color: #642c99;
+}
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Wendy One";
+  src: url("./../fonts/WendyOne-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Lato Regular";
+  src: url("./../fonts/Lato-Regular.ttf");
+}
+@font-face {
+  font-family: "Lato Bold";
+  src: url("./../fonts/Lato-Bold.ttf");
 }
 
 .navbar-brand {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 18px;
-    line-height: 22px;
-    color: #642C99;
+  font-family: "Lato Regular";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 22px;
+  color: #642c99;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    color: #642C99;
+  color: #642c99;
 }
 
 body {
-    background: #E5E5E5;
+  background: #FCEFD2;
+  font-family: "Lato Regular";
 }
 
 .touch-text {
-    padding-left: 50px;
+  padding-left: 50px;
 }
 
 .touch-text .h-2 {
-    font-family: 'Wendy One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 100px;
-    line-height: 106px;
-    color: #642C99;
+  font-family: "Wendy One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 100px;
+  line-height: 106px;
+  color: #642c99;
 }
 
 .touch-text .p-1 {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 26px;
-    color: #642C99;
+  font-size: 18px;
+  line-height: 26px;
+  color: #642c99;
 }
 
 .touch-text .btn {
-    background: #642C99;
-    border-radius: 8px;
+  background: var(--primary-color);
+  border-radius: 8px;
+  color: #fff;
+  padding: 0.5em 3em;
 }
 
-.imge{
-    position:absolute;
-    right: 160px;
+.imge {
+  position: absolute;
+  right: 160px;
 }
 
 .banner_wrapper {
-    background-image: url('../images/2.png');
-    /* min-height: 100vh; */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 180px 0 980px;
-    padding-top: 300px;
-    /* padding-right: 0px; */
-
+  background-image: url("../images/2.png");
+  /* min-height: 100vh; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 180px 0 980px;
+  padding-top: 300px;
+  /* padding-right: 0px; */
 }
 
 .top {
-	position: absolute;
-	top: 990px;
-	left: 280px;
+  position: absolute;
+  top: 990px;
+  left: 280px;
 }
 
 .text .h-2 {
-    font-family: 'Wendy One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 100px;
-    line-height: 106px;
-    color: #FDEFD1;
+  font-family: "Wendy One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 100px;
+  line-height: 106px;
+  color: #fdefd1;
 }
 
 .text .p-1 {
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 26px;
-    color: #FDEFD1;
+  font-size: 18px;
+  line-height: 26px;
+  color: #fdefd1;
 }
 
-
 .foot {
-    background-image: url('../images/5.png');
-    background-repeat: no-repeat;
-    height: 500;
-    background-size: cover;
-    padding-top: 300px;
+  background-image: url("../images/5.png");
+  background-repeat: no-repeat;
+  height: 500;
+  background-size: cover;
+  padding-top: 300px;
 }
 
 .txt .h-2 {
-    font-family: 'Wendy One';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 70px;
-    line-height: 74px;
+  font-family: "Wendy One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 70px;
+  line-height: 74px;
 
-    color: #FEEFD0;
-
+  color: #feefd0;
 }
 
 .map-container {
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    position: relative;
-    height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
 }
 
 .map-container iframe {
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
-
 
 .cl {
-    color: #FDEFD1;
+  color: #fdefd1;
 }
 
-.cl .h-2{
-    font-family: 'Wendy One';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 34px;
-
+.cl .h-2 {
+  font-family: "Wendy One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 34px;
 }
 
-.text{
-    font-family: 'Lato';
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 48px;
+.text {
+  font-family: "Lato Bold";
+  font-size: 18px;
+  line-height: 48px;
 }
